feat: post page prototype

--- a/posts/test.mdx
+++ b/posts/test.mdx
@@ -1,5 +1,10 @@
 ---
 title: Lorem Ipsum Dolor Sit Amet uwu
+date: "2021-10-28"
+author:
+  name: Lynn
+  link: https://twitter.com/omegavesko
+  avatar: /images/avatars/lynn.jpg
 ---
 
 test content uwu
