--- a/posts/does-php-loop-through-an-array-to-find-an-element.mdx
+++ b/posts/does-php-loop-through-an-array-to-find-an-element.mdx
@@ -1,5 +1,5 @@
 ---
-title: Does PHP Loop Through the Whole Array To Find a Specific Element?
+title: Does PHP Loop Through the Whole Array to Find a Specific Element?
 date: "2021-10-31"
 author:
   name: Lynn
