chore: update Twitter links

--- a/posts/7-ways-to-put-your-php-app-on-the-internet.mdx
+++ b/posts/7-ways-to-put-your-php-app-on-the-internet.mdx
@@ -3,7 +3,7 @@ title: 7 of the Easiest Ways to put Your PHP App on the Internet
 date: "2021-10-31"
 author:
   name: Lynn
-  link: https://twitter.com/omegavesko
+  link: https://twitter.com/lynnntropy
   avatar: /images/avatars/lynn.jpg
 ---
 
@@ -396,4 +396,4 @@ Given that serverless platforms tend to be much cheaper than more traditional op
 
 It goes without saying that this list doesn't come close to covering every option at your disposal, but I hope it's a good overview of the most interesting and popular options today.
 
-Think your favorite platform should be on this list, but isn't? Feel free to yell at me about it on [Twitter](https://twitter.com/omegavesko).
+Think your favorite platform should be on this list, but isn't? Feel free to yell at me about it on [Twitter](https://twitter.com/lynnntropy).
