--- a/posts/composer-install-in-development-with-docker.mdx
+++ b/posts/composer-install-in-development-with-docker.mdx
@@ -3,7 +3,7 @@ title: "PHP Development With Docker: Where Should You Run 'composer install'?"
 date: "2021-11-06"
 author:
   name: Lynn
-  link: https://twitter.com/omegavesko
+  link: https://twitter.com/lynnntropy
   avatar: /images/avatars/lynn.jpg
 ---
 
