--- a/posts/dont-forget-to-session-start.mdx
+++ b/posts/dont-forget-to-session-start.mdx
@@ -3,7 +3,7 @@ title: Don't Forget to session_start()!
 date: "2021-11-01"
 author:
   name: Lynn
-  link: https://twitter.com/omegavesko
+  link: https://twitter.com/lynnntropy
   avatar: /images/avatars/lynn.jpg
 ---
 
