--- a/posts/yes-php-is-worth-using.mdx
+++ b/posts/yes-php-is-worth-using.mdx
@@ -3,7 +3,7 @@ title: Yes, PHP is Worth Learning/Using in $CURRENT_YEAR
 date: "2021-11-17"
 author:
   name: Lynn
-  link: https://twitter.com/omegavesko
+  link: https://twitter.com/lynnntropy
   avatar: /images/avatars/lynn.jpg
 ---
 
@@ -359,4 +359,4 @@ If you came into this post with the mindset that PHP is a legacy language nobody
 
 PHP, of course, still has its share of warts, but more than anything else, what I wanted to convey with this post is that **it's absolutely possible to write reliable, clean, maintainable code in PHP that you and/or your team will be happy with**. Not only that, but there are parts of PHP that you might even _prefer_ to how things work in other languages you're familiar with.
 
-Still not convinced? You're more than welcome to peruse the rest of this site to perhaps get a better feel for what real-world PHP looks like, and if you have concerns you think I overlooked in this post, I'd be happy to talk about it [on Twitter](https://twitter.com/omegavesko).
+Still not convinced? You're more than welcome to peruse the rest of this site to perhaps get a better feel for what real-world PHP looks like, and if you have concerns you think I overlooked in this post, I'd be happy to talk about it [on Twitter](https://twitter.com/lynnntropy).
