--- a/posts/does-php-loop-through-an-array-to-find-an-element.mdx
+++ b/posts/does-php-loop-through-an-array-to-find-an-element.mdx
@@ -3,7 +3,7 @@ title: Does PHP Loop Through the Whole Array to Find a Specific Element?
 date: "2021-10-31"
 author:
   name: Lynn
-  link: https://twitter.com/omegavesko
+  link: https://twitter.com/lynnntropy
   avatar: /images/avatars/lynn.jpg
 ---
 
