--- a/posts/is-it-okay-to-put-some-values-directly-into-an-sql-query.mdx
+++ b/posts/is-it-okay-to-put-some-values-directly-into-an-sql-query.mdx
@@ -3,7 +3,7 @@ title: Is It Okay To Put Some Values Directly Into an SQL Query?
 date: "2021-11-07"
 author:
   name: Lynn
-  link: https://twitter.com/omegavesko
+  link: https://twitter.com/lynnntropy
   avatar: /images/avatars/lynn.jpg
 ---
 
