--- a/posts/why-is-php-slow-on-windows.mdx
+++ b/posts/why-is-php-slow-on-windows.mdx
@@ -3,7 +3,7 @@ title: Why is PHP So Slow On Windows?
 date: "2021-10-25"
 author:
   name: Lynn
-  link: https://twitter.com/omegavesko
+  link: https://twitter.com/lynnntropy
   avatar: /images/avatars/lynn.jpg
 ---
 
